--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,11 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/org.apache.derby/derby
     implementation 'org.apache.derby:derby:10.14.2.0'
-
     // https://mvnrepository.com/artifact/com.alibaba/druid
     implementation 'com.alibaba:druid:1.2.16'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
