shadowJar后手动将数据库一起打包

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,2 +1,3 @@
 druid.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-druid.url=jdbc:derby:src/main/resources/database/Gomoku;create=true
+#druid.url=jdbc:derby:src/main/resources/database/Gomoku;create=true
+druid.url=jdbc:derby:database/Gomoku;create=true
